added support for creating custom actions for an integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": [],
+  "include": [
+    "./packages/shared",
+    "./packages/backend/src",
+    "./packages/frontend/src"
+  ],
   "exclude": [
     "node_modules",
     ".eslintrc.cjs"
