--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "scripts": {
+    "start": "node ../../dist/backend/src/dev/server.js",
     "build": "tsc -b tsconfig.json",
     "lint": "eslint ./src ../shared --ext .ts",
     "lint:fix": "eslint ./src ../shared --ext .ts --fix"
