--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -2,10 +2,11 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "../",
-    "outDir": "../../dist/"
+    "outDir": "../../dist/",
+    "target": "ES2015"
   },
   "include": [
     "./",
     "../shared"
-  ],
+  ]
 }
