--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clean:modules": "rm -rf ./package-lock.json ./node_modules",
     "lint": "npm run lint -ws",
     "lint:fix": "npm run lint:fix -ws",
-    "lint:ci-deactivated": "eslint -f checkstyle -o reports/checkstyle.xml .",
+    "lint:ci": "eslint -f checkstyle -o reports/checkstyle.xml .",
     "build": "npm run build -ws",
     "postbuild": "npm pack && mv $(npm run --silent npm-package-name) $(npm run --silent artifact-name)",
     "//deploy:login": "curl -X POST $npm_config_deploy_url/api/auth/login --cookie-jar 'lke.cookie' -H 'Content-type: application/json' -d '{ \"usernameOrEmail\": \"'$npm_config_deploy_user'\", \"password\": \"'$npm_config_deploy_pass'\" }'",
