--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "node ../../dist/backend/src/dev/server.js",
     "build": "tsc -b tsconfig.json",
+    "test": "node --test ../../dist/backend/src/test/*.js",
     "lint": "eslint ./src ../shared --ext .ts",
     "lint:fix": "eslint ./src ../shared --ext .ts --fix"
   },
