--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
   "bundledDependencies": true,
   "dependencies": {
     "@linkurious/rest-client": "4.1.6",
+    "@types/superagent-proxy": "3.0.4",
     "express": "4.17.3",
-    "superagent": "8.1.2"
+    "superagent": "10.1.1",
+    "superagent-proxy": "3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "6.16.0",
