--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,13 +8,16 @@
     "lint": "eslint ./src ../shared --ext .ts",
     "lint:fix": "eslint ./src ../shared --ext .ts --fix"
   },
+  "type": "module",
   "bundledDependencies": [
     "express",
-    "superagent"
+    "superagent",
+    "https-proxy-agent"
   ],
   "dependencies": {
-    "express": "4.17.3",
-    "superagent": "8.1.2"
+    "express": "4.21.2",
+    "superagent": "10.1.1",
+    "https-proxy-agent": "7.0.6"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
