--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/Linkurious/lke-plugin-third-party-data"
   },
   "engines": {
-    "node": "20.18.0"
+    "node": "22.19.0"
   },
   "author": {
     "name": "David Rapin",
@@ -44,12 +44,7 @@
     "LICENSE"
   ],
   "bundledDependencies": true,
-  "dependencies": {
-    "@linkurious/rest-client": "4.1.6",
-    "express": "4.21.2",
-    "superagent": "10.1.1",
-    "https-proxy-agent": "7.0.6"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "6.16.0",
     "eslint": "8.56.0",
