LKE-14042 make saveConfig fast by avoiding rebooting all plugins to save the config
Signed-off-by: davidrapin <david@linkurio.us>

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "bootstrap": "5.3.2",
-    "@linkurious/rest-client": "4.2.5"
+    "@linkurious/rest-client": "4.2.5",
+    "superagent": "10.2.2"
   },
   "devDependencies": {
     "@types/bootstrap": "5.2.10",
