--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "bundledDependencies": true,
   "dependencies": {},
   "devDependencies": {
+    "superagent": "10.2.2",
     "@typescript-eslint/eslint-plugin": "6.16.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
