LKE-14042 Load more details from Company House UK (#24)
* LKE-14042 add support for loading officers and persons with significant control in the Company House UK integration
* LKE-14042 make saveConfig fast by avoiding rebooting all plugins to save the config
* LKE-14042 improve layout after adding new nodes (pin existing nodes but take them into account in the layout)
* LKE-14042 fix tests
* LKE-14042 fix linter
* LKE-14042 open the plugin in a modal if possible

---------

Signed-off-by: davidrapin <david@linkurio.us>

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/Linkurious/lke-plugin-third-party-data"
   },
   "engines": {
-    "node": "20.18.0"
+    "node": "22.19.0"
   },
   "author": {
     "name": "David Rapin",
@@ -28,6 +28,7 @@
     "lint": "npm run lint -ws",
     "lint:fix": "npm run lint:fix -ws",
     "lint:ci": "eslint -f checkstyle -o reports/checkstyle.xml .",
+    "tsc": "npm run build -ws",
     "build": "npm run build -ws",
     "test": "npm test -w=packages/backend",
     "postbuild": "mkdir -p tmp/github_release && npm pack && mv $(npm run --silent npm-package-name) $(npm run --silent artifact-name) && ln -sf $(pwd)/$(npm run --silent artifact-name) $(pwd)/tmp/github_release/lke-plugin-$(npm run --silent plugin-name)-v$(cat .version).lke",
@@ -44,19 +45,16 @@
     "LICENSE"
   ],
   "bundledDependencies": true,
-  "dependencies": {
-    "@linkurious/rest-client": "4.1.6",
-    "express": "4.21.2",
-    "superagent": "10.1.1",
-    "https-proxy-agent": "7.0.6"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "superagent": "10.2.2",
     "@typescript-eslint/eslint-plugin": "6.16.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.1.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "https-proxy-agent": "7.0.6"
   },
   "workspaces": [
     "packages/backend",
