--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -15,13 +15,15 @@
     "https-proxy-agent"
   ],
   "dependencies": {
+    "@linkurious/rest-client": "4.2.5",
     "express": "4.21.2",
-    "superagent": "10.1.1",
+    "superagent": "10.2.2",
     "https-proxy-agent": "7.0.6"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
-    "@types/node": "18.19.3",
-    "@types/superagent": "4.1.15"
+    "@types/node": "22.18.10",
+    "@types/superagent": "8.1.9",
+    "@types/http-proxy-agent": "4.0.1"
   }
 }
